sacando htmls de carpeta html

--- a/4inline.html
+++ b/4inline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style_4inline.css" />
+    <link rel="stylesheet" href="./css/style_4inline.css" />
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         </svg>
       </div>
       <div class="logoo">
-        <a href="index.html"><img class="logo" src="../images/zonagamer2.png" alt="logo" /></a>
+        <a href="index.html"><img class="logo" src="./images/zonagamer2.png" alt="logo" /></a>
       </div>
       <div class="headerDerecha">
         <svg class="carrito" xmlns="http://www.w3.org/2000/svg">
@@ -122,7 +122,7 @@
     <div class="nav-2" id="nav_2">
       <ul class="nav-list">
         <div class="name-user">
-          <img src="../images/icono-perfil.png" class="image-user" />
+          <img src="./images/icono-perfil.png" class="image-user" />
           <li>Pepito123</li>
           <li class="font">pepito123@gmail.com</li>
         </div>
@@ -227,7 +227,7 @@
   
 
     <div class="container">
-        <img src="../images/batmanvssuperman.jpg" alt="Batman vs Superman">
+        <img src="./images/batmanvssuperman.jpg" alt="Batman vs Superman">
     
         <div class="text">
             <h2>Como ganar</h2>
@@ -271,7 +271,7 @@
         <div class="publish">
             <h2 class="question">¿Qué te pareció el juego?</h2>
             <div class="publish-content">
-                <img src="../images/image_comentario.png" class="image2">
+                <img src="./images/image_comentario.png" class="image2">
                 <input class="comments" placeholder="hola"></input>
             </div>
             <div class="info-row">
@@ -302,7 +302,7 @@
     <div class="container-publish">
       <div class="reading">
           <div class="info">
-              <img src="../images/image_comentario.png" class="image2">
+              <img src="./images/image_comentario.png" class="image2">
               <div class="text">
                   <div class="info-row">
                       <p>Maestro Splinter</p>
@@ -337,10 +337,10 @@
 
   <footer>
     <div class="image-container2">
-      <img src="../images/zonagamer2.png" />
-      <img src="../images/secure.png" />
-      <img src="../images/master.png" />
-      <img src="../images/visa.png" />
+      <img src="./images/zonagamer2.png" />
+      <img src="./images/secure.png" />
+      <img src="./images/master.png" />
+      <img src="./images/visa.png" />
     </div>
     <div class="grid-container">
       <div class="item">
@@ -446,6 +446,6 @@
       </svg>
     </div>
   </footer>
-  <script src="../js/prueba.js" type="text/javascript"></script>
+  <script src="./js/prueba.js" type="text/javascript"></script>
 </body>
 </html>
