--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
     <div class="center-logo">
-      <img src="../images/zonagamer2.png" class="image" />
+      <img src="./images/zonagamer2.png" class="image" />
     </div>
 
     <div class="separator-container">
@@ -36,26 +36,26 @@
       </form>
 
       <div class="container-captcha">
-        <img src="../images/captcha2.png" class="captcha">
+        <img src="./images/captcha2.png" class="captcha">
       </div>
 
       <button  class="registerButton fill-button " ><span>Iniciar Sesion</span></button>
 
       <div class="image-container">
         <a href="index.html">
-            <img src="../images/entrar_con_face.jpg" class="image-2">
+            <img src="./images/entrar_con_face.jpg" class="image-2">
         </a>
         
         <a href="index.html">
-            <img src="../images/entrar_con_google.jpg" class="image-3">
+            <img src="./images/entrar_con_google.jpg" class="image-3">
         </a>
     </div>
     <footer>
       <div class="image-container2">
-        <img src="../images/zonagamer2.png" />
-        <img src="../images/secure.png" />
-        <img src="../images/master.png" />
-        <img src="../images/visa.png" />
+        <img src="./images/zonagamer2.png" />
+        <img src="./images/secure.png" />
+        <img src="./images/master.png" />
+        <img src="./images/visa.png" />
     </div>
   
       
@@ -95,6 +95,6 @@
         </div>
       </div>
     </footer>
-  <script src="app.js" type="text/javascript"></script>
+  <script src="./js/app.js" type="text/javascript"></script>
   </body>
 </html>
