--- a/prueba.html
+++ b/prueba.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/prueba.css" />
+    <link rel="stylesheet" href="./css/prueba.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +26,7 @@
         </svg>
       </div>
       <div class="logoo">
-        <img class="logo" src="../images/zonagamer2.png" alt="logo" />
+        <img class="logo" src="./images/zonagamer2.png" alt="logo" />
       </div>
       <div class="headerDerecha">
         <svg class="carrito" xmlns="http://www.w3.org/2000/svg">
@@ -132,7 +132,7 @@
     <div class="nav-2" id="nav_2">
       <ul class="nav-list">
         <div class="name-user">
-          <img src="../images/icono-perfil.png" class="image-user" />
+          <img src="./images/icono-perfil.png" class="image-user" />
           <li>Pepito123</li>
           <li class="font">pepito123@gmail.com</li>
         </div>
@@ -228,7 +228,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -250,7 +250,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -261,7 +261,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -272,7 +272,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -283,7 +283,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -302,23 +302,23 @@
     <h2 class="tipoDeJuego">Juego Destacado</h2>
     <div class="important-game">
       <div class="content">
-        <img src="../images/subway-surfer.jpg" class="image-important-game" />
+        <img src="./images/subway-surfer.jpg" class="image-important-game" />
         <div class="game-details">
           <h1 class="title">Subway-Surfer</h1>
           <div class="mini-image">
             <img
-              src="../images/subway-surfer2.jpg"
+              src="./images/subway-surfer2.jpg"
               class="image-subimportant-game"
             />
             <img
-              src="../images/Subway-Surfer3.jpeg"
+              src="./images/Subway-Surfer3.jpeg"
               class="image-subimportant-game"
             />
             <img
-              src="../images/subway-surfers.jpg"
+              src="./images/subway-surfers.jpg"
               class="image-subimportant-game"
             />
-            <img src="../images/download.jpg" class="image-subimportant-game" />
+            <img src="./images/download.jpg" class="image-subimportant-game" />
           </div>
           <div class="price">
             <p>Disponible</p>
@@ -354,7 +354,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -366,7 +366,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -401,7 +401,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -412,7 +412,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -423,7 +423,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -434,7 +434,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -445,7 +445,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -456,7 +456,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -467,7 +467,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -487,7 +487,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -498,7 +498,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -509,7 +509,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -520,7 +520,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -531,7 +531,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -542,7 +542,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -553,7 +553,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -564,7 +564,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -575,7 +575,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -598,7 +598,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -609,7 +609,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -620,7 +620,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -631,7 +631,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -642,7 +642,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -653,7 +653,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -674,7 +674,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -685,7 +685,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -696,7 +696,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -707,7 +707,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/MarioBros.png" alt="amongUs" />
+            <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -718,7 +718,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/subway.png" alt="amongUs" />
+            <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -729,7 +729,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/FyA.png" alt="amongUs" />
+            <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -740,7 +740,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Among Us</p>
@@ -751,7 +751,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -762,7 +762,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="../images/amongUs.png" alt="amongUs" />
+            <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
                 <p>Nombre juego</p>
@@ -778,10 +778,10 @@
 
     <footer>
       <div class="image-container2">
-        <img src="../images/zonagamer2.png" />
-        <img src="../images/secure.png" />
-        <img src="../images/master.png" />
-        <img src="../images/visa.png" />
+        <img src="./images/zonagamer2.png" />
+        <img src="./images/secure.png" />
+        <img src="./images/master.png" />
+        <img src="./images/visa.png" />
       </div>
       <div class="grid-container">
         <div class="item">
@@ -891,6 +891,6 @@
     </footer>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="../js/prueba.js" type="text/javascript"></script>
+    <script src="./js/prueba.js" type="text/javascript"></script>
   </body>
 </html>
