--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <img src="./images/amongUs.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Among Us</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
                 <p>Among Us</p>
@@ -242,10 +242,10 @@
             <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Batman VS Superman</p>
               </div>
             </div>
           </div>
@@ -253,10 +253,10 @@
             <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Candy Crush</p>
               </div>
             </div>
           </div>
@@ -264,10 +264,10 @@
             <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Mario Bros</p>
               </div>
             </div>
           </div>
@@ -275,10 +275,10 @@
             <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Subway Surfer</p>
               </div>
             </div>
           </div>
@@ -286,10 +286,10 @@
             <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Agua VS Fuego</p>
               </div>
             </div>
           </div>
@@ -415,75 +415,53 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/MarioBros.png" alt="amongUs" />
+            <img src="./images/brawl_stars.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Brawl Stars</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/subway.png" alt="amongUs" />
+            <img src="./images/clash_of_orcs.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Clash of Orcs</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/FyA.png" alt="amongUs" />
+            <img src="./images/boom_beach.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Boom Beach</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
+            <img src="./images/clash_royale.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Among Us</p>
+                <p>Accion</p>
               </div>
               <div class="card-text">
-                <p>Among Us</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
-            <div class="card-descripcion">
-              <div class="card-tittle">
-                <p>Nombre juego</p>
-              </div>
-              <div class="card-text">
-                <p>Nombre juego Grande</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
-            <div class="card-descripcion">
-              <div class="card-tittle">
-                <p>Nombre juego</p>
-              </div>
-              <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Clash Royale</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <h2 class="tipoDeJuego">Articulo</h2>
+    <h2 class="tipoDeJuego">Puzzles</h2>
     <div class="main">
       <div class="swiper-container mySwiper" id="swiper2" data-swiper="2">
         <div class="swiper-button-next"></div>
@@ -501,13 +479,13 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/hay_hay.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Hay Day</p>
               </div>
             </div>
           </div>
@@ -515,10 +493,10 @@
             <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Candy Crush</p>
               </div>
             </div>
           </div>
@@ -526,10 +504,10 @@
             <img src="./images/MarioBros.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Mario Bros</p>
               </div>
             </div>
           </div>
@@ -537,10 +515,10 @@
             <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Subway Surfer</p>
               </div>
             </div>
           </div>
@@ -548,46 +526,25 @@
             <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Fuego y Agua</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
+            <img src="./images/hollow_night.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Among Us</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Among Us</p>
+                <p>Hollow night</p>
               </div>
             </div>
           </div>
-          <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
-            <div class="card-descripcion">
-              <div class="card-tittle">
-                <p>Nombre juego</p>
-              </div>
-              <div class="card-text">
-                <p>Nombre juego Grande</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
-            <div class="card-descripcion">
-              <div class="card-tittle">
-                <p>Nombre juego</p>
-              </div>
-              <div class="card-text">
-                <p>Nombre juego Grande</p>
-              </div>
-            </div>
-          </div>
+         
         </div>
       </div>
     </div>
@@ -612,13 +569,13 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/redmatch.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Adventura</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Red Match</p>
               </div>
             </div>
           </div>
@@ -626,21 +583,21 @@
             <img src="./images/CandyCrush.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Candy Crush</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/MarioBros.png" alt="amongUs" />
+            <img src="./images/pummel_party.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Adventura</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Pummel Party</p>
               </div>
             </div>
           </div>
@@ -648,10 +605,10 @@
             <img src="./images/subway.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Subway Surfer</p>
               </div>
             </div>
           </div>
@@ -659,10 +616,10 @@
             <img src="./images/FyA.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Puzzles</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Agua VS Fuego</p>
               </div>
             </div>
           </div>
@@ -670,111 +627,90 @@
       </div>
     </div>
 
-    <h2 class="tipoDeJuego">Articulo</h2>
+    <h2 class="tipoDeJuego">Estrategia</h2>
     <div class="main">
       <div class="swiper-container mySwiper" id="swiper4" data-swiper="4">
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
+            <img src="./images/portal.jpeg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Among Us</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Among Us</p>
+                <p>Portal</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/batmanvssuperman.jpg" alt="amongUs" />
+            <img src="./images/retail_royale.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Retail Royale</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/CandyCrush.png" alt="amongUs" />
+            <img src="./images/sonic.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Sonic</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/MarioBros.png" alt="amongUs" />
+            <img src="./images/zup.jpg" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Zup!</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/subway.png" alt="amongUs" />
+            <img src="./images/geometry_dash.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Geometry Dash</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/FyA.png" alt="amongUs" />
+            <img src="./images/free_fire.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Nombre juego</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Nombre juego Grande</p>
+                <p>Free Fire</p>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
+            <img src="./images/clash_of_clans.png" alt="amongUs" />
             <div class="card-descripcion">
               <div class="card-tittle">
-                <p>Among Us</p>
+                <p>Estrategia</p>
               </div>
               <div class="card-text">
-                <p>Among Us</p>
+                <p>Clash Of Clans</p>
               </div>
             </div>
           </div>
-          <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
-            <div class="card-descripcion">
-              <div class="card-tittle">
-                <p>Nombre juego</p>
-              </div>
-              <div class="card-text">
-                <p>Nombre juego Grande</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/amongUs.png" alt="amongUs" />
-            <div class="card-descripcion">
-              <div class="card-tittle">
-                <p>Nombre juego</p>
-              </div>
-              <div class="card-text">
-                <p>Nombre juego Grande</p>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
